字节码增加泛型参数，类型转换调整